Development Portal (2017-10-24 shi)
==============================
Display participating-org regardless of case for all themes


Development Portal (2017-10-23 shi)
==============================
Lookup participating-org@ref
Display provider-org and receiver-org in planned-disbursement
Use @ref in planned-disbursement as links
Update css for budget
Fix Print-friendly css
Fix reporting-org line-height
Refactor css
Use @aid over @ref in receiver-org and provider-org links in SAVi
Add graphs for recipient-country
Remove display for recipient-country spans
Update all themes with new elements
Fix padding dimension in result SAVi


Development Portal (2017-10-22 shi)
==============================
Add collapse buttons to certain SAVi elements
Add css styles to new spans
Update all themes with new element
Fix Print-friendly css


Development Portal (2017-10-20 shi)
==============================
Add capitalised participating-org @role in SAVi
Update Print-friendly css
Display planned-disbursement @type in SAVi
Update all themes with new elements


Development Portal (2017-10-19 shi)
==============================
Use @aid over @ref in participating-org links in SAVi
Fix transaction columns
Minor css updates
Display reporting-org@ref as a link to publisher page
Add more document-link types
Update all themes with new elements


Development Portal (2017-10-17 shi)
==============================
Fix layout for result in SAVi
Group indicator span-title and description
Add iati_codes json for @org_type and @org_role
Sort document-link


Development Portal (2017-10-16 shi)
==============================
Added default and more selector attributes for document-link
Only display sector graph without sector spans
Minor css fixes
Wrap <narrative> around participating-org if absent
Group participating-org roles
Update settings css
Fixed viewport in q.html in activities.xsl
Removed recipient-country if empty
Fix timeline for results between dates


Development Portal (2017-10-15 shi)