@@ -572,6 +572,7 @@ a.a_document-link:hover						{background-color:rgba(255,255,255,1);}
 a.a_document-link document-link span-title	{color:rgba(85,85,85,1);}
 document-link span							{color:rgba(136,136,136,1);}
 a.a_document-link span-title:after			{color:rgba(255,255,255,1); background-color:rgba(15,15,15,0.4);}
+span-narrative.doc-cat						{color:rgba(255,255,255,1); background-color:rgba(15,15,15,0.4);}
 
 
 /*	Family Tree list
@@ -593,3 +594,8 @@ span.span_transaction span.hide, span.span_planned-disbursement span.hide, span.
 span.span_result span.hide			{color:rgba(204,204,204,1);}
 span.span_transaction span.hide:hover, span.span_planned-disbursement span.hide:hover, span.span_budget span.hide:hover,
 span.span_result span.hide:hover	{color:rgba(255,255,255,1);}
+
+
+/*	Count
+	============================================= */
+span.length {color:rgba(255,255,255,1);}
