@@ -2870,5 +2870,37 @@
 		"2": "Accountable",
 		"3": "Extending",
 		"4": "Implementing"
+	},
+	"doc_cat": {
+		"A01": "Pre- and post-project impact appraisal",
+		"A02": "Objectives / Purpose of activity",
+		"A03": "Intended ultimate beneficiaries",
+		"A04": "Conditions",
+		"A05": "Budget",
+		"A06": "Summary information about contract",
+		"A07": "Review of project performance and evaluation",
+		"A08": "Results, outcomes and outputs",
+		"A09": "Memorandum of understanding (If agreed by all parties)",
+		"A10": "Tender",
+		"A11": "Contract",
+		"A12": "Activity web page",
+		"B01": "Annual report",
+		"B02": "Institutional Strategy paper",
+		"B03": "Country strategy paper",
+		"B04": "Aid Allocation Policy",
+		"B05": "Procurement Policy and Procedure",
+		"B06": "Institutional Audit Report",
+		"B07": "Country Audit Report",
+		"B08": "Exclusions Policy",
+		"B09": "Institutional Evaluation Report",
+		"B10": "Country Evaluation Report",
+		"B11": "Sector strategy",
+		"B12": "Thematic strategy",
+		"B13": "Country-level Memorandum of Understanding",
+		"B14": "Evaluations policy",
+		"B15": "General Terms and Conditions",
+		"B16": "Organisation web page",
+		"B17": "Country/Region web page",
+		"B18": "Sector web page"
 	}
 }
