@@ -1,3 +1,14 @@
+Development Portal (2017-10-26 shi)
+==============================
+Fix n+2 titles in document-link
+Add category codes for document-link
+Add element count
+Add check for counting only dac sectors
+Add css attribute selector for spaces in links (pdf)
+Update all themes
+Disable link if participating-org is not publisher
+
+
 Development Portal (2017-10-24 shi)
 ==============================
 Display participating-org regardless of case for all themes
